--- a/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
@@ -128,7 +128,7 @@
     </div>
     <div class="text-group">
       <p class="title">Training Hours Needed</p>
-      <p class="info">@TrainingOrder.Duration Hours</p>
+      <p class="info">@TrainingOrder.Lesson.Duration Hours</p>
     </div>
     <div class="text-group">
       <p class="title">Begin Date</p>
